[package]
name = "embedded-redis"
description = "A no_std Redis client"
keywords = ["redis", "network", "no_std", "database"]
categories  = ["embedded", "database", "no-std"]
authors = ["PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.7.3"
edition = "2021"
repository = "https://github.com/pegasus-aero/rt-embedded-redis"
readme = "README.md"
documentation = "https://docs.rs/embedded-redis"

[dependencies]
embedded-nal = "0.8.0"
embedded-time = "0.12.1"
nb = "1.1.0"
redis-protocol = { version = "6.0.0", default-features = false, features = ["bytes", "resp2", "resp3", "libm", "hashbrown", "alloc"] }
bytes = { version = "1.9.0", default-features = false }
mockall = { version = "0.12.1", optional=true }

[dev-dependencies]
std-embedded-nal = { package = "mm-std-embedded-nal", version = "0.3.0" }
std-embedded-time = "0.1.0"
mockall = { version = "0.12.1" }

[features]
default = []

# Enables some mocking utilties
mock = ["mockall"]

# Enables benchmarks (requires nightly Rust)
benchmarks = []

# Fails on warnings
strict = []